fixed effin spacing around list item em dashes

--- a/assets/css/directory.sass
+++ b/assets/css/directory.sass
@@ -19,7 +19,7 @@ article
     h1
       font-size: 1em
       &::after
-        content: '\202F\2014\202F'
+        content: '\00A0\2014\0020'
         font-weight: 400
         color: $mix-color
     p
